  was in fact stopped by user is now fixed

* (MB-5020) bug causing rebalance to be incorrectly displayed as
  running preventing failover was fixed

* (MB-4023) couchbase server now using dedicated memcached port for
  it's own stats gathering, orchestration, replication and
  rebalance. Making it more robust against mis-configured clients.

* /diag/masterEvents cluster events streaming facility was
  implemented. See doc/master-events.txt for more details.

* (MB-4564) during failover and rebalance out couchbase server now
  leaves data files. So that accident failover does not leads to
  catastrophic data loss. Those files are deleted when node is
  rebalanced back in or becomes independent single-node cluster.

* (MB-4967) couchbase_num_vbuckets_default ns_config variable (absent
  by default) can now be used to change number of vbuckets for any
  couchbase buckets created after that change. The only way to change
  it is via /diag/eval.

* mastership takeover is now clearly logged

* (MB-4960) mem_used and some other stats are now displayed on UI

* (MB-5050) autofailover service is now aware that it's not possible
  to fail over during rebalance

* (MB-5063) couchbase server now disallows attempts to rebalance out
  unknown nodes instead of misbehaving

* (MB-5019) bug when create bucket dialog was displaying incorrect
  remaining quote right after bucket deletion is now fixed

* internal cluster management stats counters facility was
  implemented. The only way so far to see those stats is in diags or
  by posting 'system_stats_collector:get_ns_server_stats().' to
  /diag/eval. So far only few stats related to reliable replica
  building during rebalance are gathered.

* diags now have tap & checkpoint stats from memcached on all nodes

* local tap & checkpoints stats are now logged after rebalance and
  each 30 seconds during rebalance

* (MB-5256) but with alert not being generated for failures to save
  item mutatins to disk was fixed